--- a/BONUS 2/css/style.css
+++ b/BONUS 2/css/style.css
@@ -5,12 +5,13 @@
 }
 
 .container{
-    width: 600px;
+    width: 800px;
     height: 600px;
     margin: 60px auto;
     display: flex;
 }
 
+/*slidebar*/
 .slide{
     display: none;
 }
@@ -30,7 +31,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    background-color: black;
+    background-color: rgb(1, 6, 19);
 }
 .prev ,.next{
     background-color: white;
@@ -59,4 +60,5 @@
 
 .filter{
     filter: brightness(1);
+    border: 2px solid #ccc;
 }
